test/e2e/invalid/bufread_wrong_index_type.mylang
{
    buffer my_buffer <int32, 5> = [];
    define y of int32 = bufread(my_buffer, true);
}
